--- a/demoCode.ipynb
+++ b/demoCode.ipynb
@@ -356,8 +356,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": [
     "# Install required libraries\n",
     "\n",
